2021-05-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.0-alpha03: Hangar24';git push
	git tag -a 5.0.0-alpha03 -m '';git push --tags

	* NCO 5.0.0-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.0-alpha02: Hangar24';git push
	git tag -a 5.0.0-alpha02 -m 'ncremap MPI fix, stdin fix, MBTR stubs, E3SM-U paths';git push --tags

	* ncremap change E3SM-U location to latest_e3sm_unified

2021-05-19  Charlie Zender  <zender@uci.edu>

	* nco_rgr_wgt() implement MBTR map-file type-specific checks

	* ncremap provide E3SM-U on binaries on all machines

	* ncremap check for mbconvert, ConvertSCRIPToExodus, mbpart

	* ncclimo/ncremap add mbtempest machine-specific paths for compy/chrysalis

	* ncclimo combine duplicated ncclimo mth_srt/end hfs code with default code

	* ncremap skip stdin check when -i in_fl used

2021-05-18  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap deprecate rhea, aims4

	* ncremap fix MPI node-indexing on ncremap DOH!

2021-05-17  Charlie Zender  <zender@uci.edu>

	* ncclimo fix statement to print months beyond an integral year in splitter segment length

2021-05-16  Charlie Zender  <zender@uci.edu>

	* ncremap add stubs (prt_nbr) to configure various MOAB executables

2021-05-14  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.0-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.0-alpha01: V for Victory';git push
	git tag -a 5.0.0-alpha01 -m 'Functionally identical to 4.9.9';git push --tags

	* Protect nco_map_var_min_max_ttl() from dereferencing NULL mask pointers from mbtempest

	* NCO 4.9.9 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9: Gesundheit!';git push
	git tag -a 4.9.9 -m 'bld noyywrap, https DAP wnd; ncks chk_map msk_a/b dgn, msk no wrn min frac_a/b; ncclimo hfs mth_srt/end, nfr dpf, fix tpd; ncremap ccw_chk fix, msk fix, tr allow_no_overlap, rgr_wgt rint() int;';git push --tags
