@@ -631,11 +631,41 @@ variables:
 	double pi_arr_dbl(lat,lon);
 	pi_arr_dbl:long_name = "Pi array double precision";
 	pi_arr_dbl:units = "fraction";
+	pi_arr_dbl:original_values = "3.1415926535897932384626433832795029";
 
 	float pi_arr_flt(lat,lon);
 	pi_arr_flt:long_name = "Pi array single precision";
 	pi_arr_flt:units = "fraction";
+	pi_arr_flt:original_values = "3.14159265";
 
+	float pi1(time);
+	pi1:long_name = "Pi array single precision starting at pi incremented by 1.0e-6 each element";
+        pi1:original_values = "3.1415927, 3.1415937, 3.1415946, 3.1415956, 3.1415966, 3.1415977, 3.1415987, 3.1415997, 3.1416006, 3.1416016";
+	
+	float pi2(time);
+	pi2:long_name = "Pi array single precision starting at pi incremented by 1.0e-6 each element";
+        pi2:original_values = "3.1415927, 3.1415937, 3.1415946, 3.1415956, 3.1415966, 3.1415977, 3.1415987, 3.1415997, 3.1416006, 3.1416016";
+	
+	float pi3(time);
+	pi3:long_name = "Pi array single precision starting at pi incremented by 1.0e-6 each element";
+        pi3:original_values = "3.1415927, 3.1415937, 3.1415946, 3.1415956, 3.1415966, 3.1415977, 3.1415987, 3.1415997, 3.1416006, 3.1416016";
+	
+	float pi4(time);
+	pi4:long_name = "Pi array single precision starting at pi incremented by 1.0e-6 each element";
+        pi4:original_values = "3.1415927, 3.1415937, 3.1415946, 3.1415956, 3.1415966, 3.1415977, 3.1415987, 3.1415997, 3.1416006, 3.1416016";
+	
+	float pi5(time);
+	pi5:long_name = "Pi array single precision starting at pi incremented by 1.0e-6 each element";
+        pi5:original_values = "3.1415927, 3.1415937, 3.1415946, 3.1415956, 3.1415966, 3.1415977, 3.1415987, 3.1415997, 3.1416006, 3.1416016";
+	
+	float pi6(time);
+        pi6:long_name = "Pi array single precision starting at pi incremented by 1.0e-6 each element";
+        pi6:original_values = "3.1415927, 3.1415937, 3.1415946, 3.1415956, 3.1415966, 3.1415977, 3.1415987, 3.1415997, 3.1416006, 3.1416016";
+	
+	float pi7(time);
+	pi7:long_name = "Pi array single precision starting at pi incremented by 1.0e-6 each element";
+        pi7:original_values = "3.1415927, 3.1415937, 3.1415946, 3.1415956, 3.1415966, 3.1415977, 3.1415987, 3.1415997, 3.1416006, 3.1416016";
+	
 	int int_var;
 	int_var:long_name = "int";
 
@@ -1612,6 +1642,13 @@ data:
 	pck_arr=-32767,0,1,32767;
 	pck_crd=-32767,0,1,32767;
 	pi=3.1415926535897932384626433832795029;
+	pi1=3.1415927,3.1415937,3.1415946,3.1415956,3.1415966,3.1415977,3.1415987,3.1415997,3.1416006,3.1416016;
+	pi2=3.1415927,3.1415937,3.1415946,3.1415956,3.1415966,3.1415977,3.1415987,3.1415997,3.1416006,3.1416016;
+	pi3=3.1415927,3.1415937,3.1415946,3.1415956,3.1415966,3.1415977,3.1415987,3.1415997,3.1416006,3.1416016;
+	pi4=3.1415927,3.1415937,3.1415946,3.1415956,3.1415966,3.1415977,3.1415987,3.1415997,3.1416006,3.1416016;
+	pi5=3.1415927,3.1415937,3.1415946,3.1415956,3.1415966,3.1415977,3.1415987,3.1415997,3.1416006,3.1416016;
+	pi6=3.1415927,3.1415937,3.1415946,3.1415956,3.1415966,3.1415977,3.1415987,3.1415997,3.1416006,3.1416016;
+	pi7=3.1415927,3.1415937,3.1415946,3.1415956,3.1415966,3.1415977,3.1415987,3.1415997,3.1416006,3.1416016;
 	pi_arr_dbl=3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029;
 	pi_arr_flt=3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029,3.1415926535897932384626433832795029;
 	upk=3.;
